azure_devops/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: flashdriveContainerRegistry.azurecr.io/flashdrive_backend:latest
          ports:
          - containerPort: 8080
