azure_devops/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend
spec:
  selector:
      matchLabels:
        app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: flashdriveContainerRegistry2.azurecr.io/flashdrive_frontend:latest
          ports:
          - containerPort: 80
